# xynenyx-ingestion

./: DEPLOYMENT.md  Dockerfile  RAILWAY_QUICKSTART.md  README.md  REPO_DESCRIPTION.md  env.example  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  config.py  main.py
app/schemas/: __init__.py  models.py
app/shared/: __init__.py  clients.py  extractors.py  pipeline.py
app/workers/: __init__.py  features_worker.py  ingestion_worker.py  processing_worker.py
scripts/: README_CLEANUP.md  __init__.py  cleanup_bad_data.py  fix_amount_conversion_issues.py  fix_suspicious_amounts.py  verify_data_quality.py  verify_processing_pipeline.py
